welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: value || is not a member of Int
	if ( (1 || 2 || 3 || 4 || 5) && vacation == false ) {
                ^